Feat: completed navbar

--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -5,6 +5,10 @@
   transform: translate(-50%, -50%);
 }
 
+@mixin format-list {
+  list-style-type: none;
+}
+
 // Media Query Manager
 /*
 max-width MQs
