Feat: pre-completed footer

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -12,7 +12,7 @@ $white: #fff;
 $black: #000;
 
 $primary-font: Flutterwave, sans-serif;
-$secondary-font: 'SF Display';
+$secondary-font: 'SF Display', sans-serif;
 $tertiary-font: 'Open Sans', sans-serif;
 $default-font-size: 1rem;
 $base-line-height: 1.6;
