Feat: completed EventCard markup

--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -7,8 +7,9 @@ button {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 
   &.nav-btn {
-    padding: 1rem 2rem;
+    padding: 1.2rem 2.6rem;
     cursor: pointer;
+    font-size: 1.2rem;
   }
 
   &.pay-btn {
