--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -3,8 +3,8 @@ button {
   background-color: $primary-color;
   color: $white;
   border-radius: 4.06693px;
-  border: 0;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+  border: 1px solid transparent;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
 
   &.nav-btn {
     padding: 1.2rem 2.6rem;
@@ -13,6 +13,15 @@ button {
   }
 
   &.pay-btn {
+    font-weight: bold;
+    cursor: pointer;
+    letter-spacing: 0.05rem;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    padding: 1.2rem 5rem;
+    font-family: $primary-font;
   }
 
   @include respond(big-desktop) {
